# upcomming

./: Cargo.toml  Dioxus.toml
.gitea/workflows/: config.js  renovate.yml
assets/styling/: calendar.css
src/: main.rs
src/components/: navbar.rs
src/jobs/: tmdb.rs
src/views/: calendar.rs  mod.rs
